# scinterm-notcurses

./: .clang-format  .gitignore  CMakeList.txt  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  LICENSE  OPTIMIZATIONS_IMPLEMENTED.md  OPTIMIZATION_ANALYSIS.md  PARALLEL_RENDERING_DESIGN.md  README.md  VERIFICATION_REPORT.md  descriptio.md
.github/workflows/: .build.yml  build.yml
cmake/: scinterm_notcurses-config.cmake.in
examples/: multi_window.c  quick_start.c  simple_editor.c  syntax_highlighting.c
include/: scinterm_notcurses.h
scintilla/qt/ScintillaEditBase/: ScintillaEditBase.h
scintilla/src/: XPM.cxx
src/plat/: scinterm_notcurses.cpp  scinterm_parallel_render.cpp  scinterm_parallel_render.h  scinterm_plat.cpp  scinterm_plat.h  scinterm_pool.cpp  scinterm_pool.h  scinterm_thread_pool.cpp  scinterm_thread_pool.h  scinterm_wcwidth.c  scinterm_wcwidth.h
tests/: test_arena.c  test_dirty.c  test_editor.c  test_event_loop.c  test_graphics_proto.c  test_listbox.c  test_security.c  test_surface_copy.c  test_timing.c
